# ELEC_278_Assignment

./: README.md
assignment/: CMakeLists.txt  defs.h  interface.c  interface.h  model.c  model.h  testrunner.c  testrunner.h  tests.c  tests.h
